  changed 'pass' to 'raise NotImplementedError' (#216)
* for ensemble.EnsembleAnalysis.run() changed to detect 
  and use _single_frame OR _single_universe (#216)
* _prepare_universe and _conclude_universe removed from 
  EnsembleAnalysis.run() method, no longer needed (per comments, #199)
* added support for Python 3.10
* dropped testing on Python 3.6

Enhancements

* new workflows registry that contains each EnsembleAnalysis for which
  a workflows module exists, for use with workflows base module (#229)
* new workflows base module that provides iterative workflow use for
  directories that contain multiple projects (#229)
* new workflows module (#217)
* new automated dihedral analysis workflow (detect dihedrals with SMARTS,
  analyze with EnsembleAnalysis, and generate seaborn violinplots) (#217)

Fixes

* for mdpow.workflows.dihedrals.periodic_angle() implement .copy(deep=True)
  to explicitly make a copy DataFrame of the data for angle padding (#242)
* fix rcoulomb in CHARMM energy minimization MDP template file (PR #210)
* fix ensemble.EnsembleAnalysis.check_groups_from_common_ensemble (#212)


2022-01-03    0.8.0
ALescoulie, orbeckst

Changes

* dropped support for Python 2 and <3.6: only Python 3.7--3.9
  are supported (#177)
* removed unused POWConfigParser.getintarray() (PR #187)
* removed deprecated mdpow-gyhd script, use mdpow-solvationenergy
  instead (#183)

Enhancements

* new Ensemble and EnsembleAtomGroup objects for loading set of system
  simulations (issue #168, PR #179)
* new EnsembleAnalysis framework for collecting data from MDPOW simulations 
  (issue #168, PR #179)
* new EnsembleAnalysis: dihedrals (#190, PR #193)    
* new EnsembleAnalysis: solvation shell (#195, PR #196)  
* new exception config.NoSectionError to indicate missing section
  ("protocol") in the YAML run input file (PR #187)
* new config.NoOptionWarning when undefined options are used (with
  default None) and POWConfigParser.get() now logs when an option is used